maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: '=' expected but ';' found.
  T = new int[10]
^JediEscaper:57: error: identifier expected but integer literal found.
  T = new int[10]
              ^JediEscaper:59: error: ']' expected but ';' found.
  bagglePos = foundBaggle()
^